Closed Bug 570195 Opened 15 years ago Closed 15 years ago

hasOwnProperty doesn't set DETECTING flag

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: taras.mozilla, Unassigned)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch fixSplinter Review
No description provided.
Attachment #449312 - Flags: review?(jorendorff)
Comment on attachment 449312 [details] [diff] [review] fix I'll whip up a jsapi-test and check this in.
Attachment #449312 - Flags: review?(jorendorff) → review+
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: