Bug 570195 - Object.prototype.hasOwnProperty doesn't set the JSRESOLVE_DETECTING flag. r=jorendorff, test by jorendorff.